new routes in swagger
